Passport almost working

--- a/Website/package.json
+++ b/Website/package.json
@@ -7,11 +7,14 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
