--- a/Website/package.json
+++ b/Website/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
