--- a/Website/package.json
+++ b/Website/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
