--- a/Website/package.json
+++ b/Website/package.json
@@ -20,7 +20,8 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "session-memory-store": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
