--- a/Website/package.json
+++ b/Website/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
