--- a/Website/package.json
+++ b/Website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -16,11 +16,12 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
-    "mysql": "^2.15.0",
+    "mysql2": "^1.4.2",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
+    "sequelize": "^4.22.5",
     "serve-favicon": "~2.4.5",
     "session-memory-store": "^0.2.2"
   },
