--- a/Website/package.json
+++ b/Website/package.json
@@ -23,7 +23,8 @@
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "zmq": "^2.15.3"
   },
   "scripts": {
     "debug": "node debug app.js",
