--- a/Website/package.json
+++ b/Website/package.json
@@ -23,6 +23,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
+    "sails-mysql": "^0.11.5",
     "shortid": "^2.2.8",
     "zmq": "^2.15.3"
   },
