--- a/Website/package.json
+++ b/Website/package.json
@@ -21,6 +21,7 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "moment": "^2.21.0",
     "nested-pop": "^0.1.4",
     "rc": "1.0.1",
     "sails": "~0.12.14",
